--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-grid-layout": "^1.5.1",
     "react-router-dom": "^7.5.0",
     "recharts": "^2.15.2",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
